syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package api;

option go_package = "github.com/balugcath/mongo-test/api";

service ProductPrice {
    rpc List (stream ProductPriceListParams) returns (stream ProductPriceListReply) {}
    rpc Fetch (ProductPriceFetchParams) returns (google.protobuf.Empty) {}
}

message ProductPriceListParams {
    enum Sort_order {
        NA = 0;
        ASC = 1;
        DESC = -1;
    }
    Sort_order sort_order = 1;
    // ../pkg/types/types.go
    string sort_field = 2;
    int64 page = 3;
    int64 len_page = 4;
}

message ProductPriceListReply {
	string product_name = 1;
	double price = 2;
  	google.protobuf.Timestamp last_update = 3;
	int64 count_update = 4;
}

message ProductPriceFetchParams {
    string url = 1;
}
